<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"

            android:title="@string/menu_home"/>

    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donate"
            android:checked="true"

            android:title="@string/donate"/>

    </group>
    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:checked="true"

            android:title="@string/menu_logout"
            />
        <item
            android:id="@+id/nav_delete"

            android:title="@string/menu_delete_account"
            />


    </group>

</menu>