<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightskyblue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/getsevanam"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:enabled="false"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_service"
                    android:layout_width="match_parent"
                    android:enabled="false"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_requiredservice"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address"
                    android:maxLines="4"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tv_clickmap"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_asktoclickmap"
                android:minLines="2"
                android:textColor="@color/text_color"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/subHeader_sp_16" />

            <ImageView
                android:id="@+id/imvmap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/iconmap_marker"/>

            <TextView
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_marginBottom"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:layout_marginRight="@dimen/button_marginRight"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@drawable/button_cornered"
                android:backgroundTint="@color/text_color"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/normalText_sp_14"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
