<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightskyblue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_30">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/givesevanam"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30"/>

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/margin_80"
                android:layout_height="@dimen/margin_80"
                android:layout_margin="@dimen/margin_20"
                android:src="@drawable/profile_avatar" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:enabled="false"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30">

                <EditText
                    android:id="@+id/et_areaofservice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_areaofservice"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30">

                <EditText
                    android:id="@+id/et_locality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_area"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30">

                <EditText
                    android:id="@+id/et_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_district"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_marginBottom"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:layout_marginRight="@dimen/button_marginRight"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/normalText_sp_14"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
