<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sea_green_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_campname"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:enabled="false"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_locality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_area"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_district"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/et_needs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_needs"
                    android:minLines="4"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />

            </android.support.design.widget.TextInputLayout>



                <TextView
                    android:id="@+id/tv_or"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_or"
                    android:minLines="2"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/subHeader_sp_16" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/bt_selectpic"
                    android:layout_width="@dimen/margin_48"
                    android:layout_height="@dimen/margin_48"
                    android:layout_marginBottom="@dimen/button_marginBottom"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/selectfromgallery"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:id="@+id/bt_takephoto"
                    android:layout_width="@dimen/margin_48"
                    android:layout_weight="1"
                    android:layout_height="@dimen/margin_48"
                    android:layout_marginBottom="@dimen/button_marginBottom"
                    android:src="@drawable/takephoto"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="160dp"
                android:layout_height="160dp" />


            <TextView
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_marginBottom"
                android:layout_marginLeft="@dimen/button_marginLeft"
                android:layout_marginRight="@dimen/button_marginRight"
                android:layout_marginTop="@dimen/button_marginTop"
                android:background="@drawable/button_cornered"
                android:backgroundTint="@color/text_color"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/normalText_sp_14"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
