<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightskyblue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_100"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/margin_64"
                android:layout_height="@dimen/margin_64"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_10"/>
            <!--android:src="@drawable/group" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_logo"
                    android:text="@string/app_name_malayalam"
                    android:textColor="@color/white"
                    android:textSize="@dimen/smallText_sp_12"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/iv_logo"
                    android:text="@string/submission_successful"
                    android:textColor="@color/white"
                    android:textSize="@dimen/submissionsuccessful"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/button_marginBottom"
            android:layout_marginLeft="@dimen/button_marginLeft"
            android:layout_marginRight="@dimen/button_marginRight"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_24"
            android:paddingRight="@dimen/margin_24"
            android:text="@string/menu_home"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/normalText_sp_14"
            android:textStyle="bold"
            android:onClick="goHome"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>